<resources>
    <string name="app_name">MuseuM BarberShop</string>
    <string name="google_map_api_key">AIzaSyD0_GEyUTJgP58HB4R2-Cx3gX0NALpaDD8</string>
    <string name="fullname">Fullname</string>
    <string name="address">Alexander Kazbegi Avenue #37</string>
    <string name="contact_us">Contact Us</string>
    <string name="tel_barbershop">555 92 92 65</string>
    <string name="instagram">museum_barbershop</string>
    <string name="facebook">fb.com/museumbarbershop</string>
    <string name="hello">Hello,</string>
    <string name="guest">Guest</string>
    <string name="home">Home</string>
    <string name="contact">Contact</string>
    <string name="options">Options</string>
    <string name="review">Review</string>
    <string name="select_barber">Selecet Barber</string>
    <string name="select_data_time">Select Data &amp; Time</string>
    <string name="choose_services">Choose A Service</string>
    <string name="haircut">Haircut</string>
    <string name="childre_haircut">Children\'s Haircut</string>
    <string name="beard_correction">Beard Correction</string>
    <string name="clipper_haircut">Clipper Haircut</string>
    <string name="haircut_beard">Haircut &amp; Beard</string>
    <string name="wax">Wax</string>
    <string name="profile_edit">Profile Edit</string>
    <string name="suppot">Support</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="username">Username</string>
    <string name="phone_number">Phone Number</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="update">Update</string>
    <string name="text">Text..</string>
    <string name="send">Send</string>
    <string name="doc_privacy">Privacy Policy DOC</string>
    <string name="review_title">Review</string>
    <string name="barbershop">MuseuM</string>
    <string name="add_review">Add Review</string>
    <string name="signin">Sign In</string>
    <string name="submit">Submit</string>
    <string name="signup">Sign Up</string>
    <string name="welcome">WELCOME</string>
    <string name="review_user">Review User</string>
    <string name="time">09:00</string>
    <string name="price">Price: </string>
    <string name="barber">Barber</string>
    <string name="timetxt">Time</string>
    <string name="review_is">Is Reserved</string>
    <string name="service">Service</string>
    <string name="zero">0</string>
    <string name="lari">₾</string>


</resources>