<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black_blue"
    tools:context=".Auth.SignUp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:fontFamily="@font/bakbakone"
            android:gravity="center"
            android:text="@string/signup"
            android:textColor="@color/white"
            android:textSize="34sp"
            android:textStyle="bold" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/imageView"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginBottom="35dp"
            android:src="@drawable/user"
            android:visibility="gone" />

        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="14dp"
            android:background="@drawable/edittextstyle"
            android:ems="10"
            android:fontFamily="@font/bakbakone"
            android:gravity="center_vertical"
            android:hint="@string/username"
            android:inputType="textEmailAddress"
            android:padding="8dp"
            android:textColor="@color/black_blue"
            android:textColorHint="@color/black_blue"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/number"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="14dp"
            android:background="@drawable/edittextstyle"
            android:ems="10"
            android:fontFamily="@font/bakbakone"
            android:gravity="center_vertical"
            android:hint="@string/phone_number"
            android:inputType="number"
            android:padding="8dp"
            android:textColor="@color/black_blue"
            android:textColorHint="@color/black_blue"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="14dp"
            android:background="@drawable/edittextstyle"
            android:ems="10"
            android:fontFamily="@font/bakbakone"
            android:gravity="center_vertical"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="8dp"
            android:textColor="@color/black_blue"
            android:textColorHint="@color/black_blue"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/pasword"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="14dp"
            android:layout_marginBottom="24dp"
            android:background="@drawable/edittextstyle"
            android:ems="10"
            android:fontFamily="@font/bakbakone"
            android:gravity="center_vertical"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="8dp"
            android:textColor="@color/black_blue"
            android:textColorHint="@color/black_blue"
            android:textSize="14sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/submit"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@drawable/btn_style"
            android:fontFamily="@font/bakbakone"
            android:gravity="center"
            android:text="@string/submit"
            android:textColor="#000000"
            android:textColorHighlight="#FFFFFF"
            android:textColorHint="@color/black"
            android:textColorLink="#FFFFFF"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/gosignin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:fontFamily="@font/bakbakone"
                android:gravity="end"
                android:text="@string/signin"
                android:textColor="#FFFFFF" />
        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>