<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black_blue"
    tools:context=".Review">

    <LinearLayout
        android:id="@+id/menu"
        android:layout_width="60dp"
        android:layout_height="0dp"
        android:background="@color/black_blue"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

        <TextView
            android:id="@+id/options"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="@font/staatliches"
            android:gravity="center"
            android:rotation="270"
            android:text="@string/options"
            android:textColor="@color/white"
            android:textSize="19sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/review"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="@font/staatliches"
            android:gravity="center"
            android:rotation="270"
            android:text="@string/review"
            android:textColor="@color/white"
            android:textSize="19sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/contact"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="@font/staatliches"
            android:gravity="center"
            android:rotation="270"
            android:text="@string/contact"
            android:textColor="@color/white"
            android:textSize="19sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/homerev"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="@font/staatliches"
            android:gravity="center"
            android:rotation="270"
            android:text="@string/home"
            android:textColor="@color/brown"
            android:textSize="26sp"
            android:textStyle="bold|italic" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/linear"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/menubtn"
            android:layout_width="35dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginStart="17.5dp"
            app:srcCompat="@drawable/baseline_menu_24" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginTop="3dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:fontFamily="@font/bakbakone"
            android:gravity="center_vertical|end"
            android:text="@string/hello"
            android:textColor="@color/brown"
            android:textSize="17sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/mainUsername"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginTop="3dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/bakbakone"
            android:gravity="center_vertical|end"
            android:text="@string/guest"
            android:textColor="#FFFFFF"
            android:textSize="17sp"
            android:textStyle="bold" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/user"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_marginEnd="12dp"
            android:background="@drawable/border_profile_img"
            android:padding="1.5dp"
            android:visibility="gone"
            app:srcCompat="@drawable/user" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/menu"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/bakbakone"
                        android:gravity="center"
                        android:paddingStart="12dp"
                        android:paddingTop="12dp"
                        android:paddingEnd="12dp"
                        android:text="@string/review_title"
                        android:textColor="@color/brown"
                        android:textSize="24sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/museum"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:background="@drawable/review_btn"
                            android:fontFamily="@font/bakbakone"
                            android:gravity="center"
                            android:padding="12dp"
                            android:text="@string/barbershop"
                            android:textColor="@color/white"
                            android:textSize="20sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/barber"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:background="@drawable/linear"
                            android:fontFamily="@font/bakbakone"
                            android:gravity="center"
                            android:padding="12dp"
                            android:text="@string/barber"
                            android:textColor="@color/white"
                            android:textSize="20sp" />
                    </LinearLayout>
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/cutline"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center|end"
                android:orientation="horizontal"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/menu"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/dashed_linear"
                    android:orientation="horizontal" />

                <ImageView
                    android:id="@+id/imageView5"
                    android:layout_width="65dp"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="12dp"
                    android:rotation="270"
                    android:src="@mipmap/scissors" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/reviewLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:visibility="visible">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/barberRecycler"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:visibility="gone" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/reviewRecycler"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="8dp"
                    android:visibility="visible" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/addreviewLayout"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@color/brown"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/addreview"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:fontFamily="@font/bakbakone"
                    android:gravity="center"
                    android:text="@string/add_review"
                    android:textColor="@color/black_blue"
                    android:textSize="20sp" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>