<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/black_blue">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView23"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:layout_weight="1"
                android:fontFamily="@font/bakbakone"
                android:text="@string/add_review"
                android:textColor="@color/brown"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/supporSelect"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:visibility="visible">

                <EditText
                    android:id="@+id/textsup"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:layout_margin="12dp"
                    android:background="@drawable/add_review_style"
                    android:ems="10"
                    android:fontFamily="@font/bakbakone"
                    android:gravity="top"
                    android:hint="@string/text"
                    android:inputType="textMultiLine"
                    android:maxLines="7"
                    android:padding="8dp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/grey"
                    android:textSize="14sp" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/send"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_margin="12dp"
                    android:background="@drawable/btn_style"
                    android:fontFamily="@font/bakbakone"
                    android:gravity="center"
                    android:text="@string/send"
                    android:textColor="#000000"
                    android:textColorHighlight="#FFFFFF"
                    android:textColorHint="@color/black"
                    android:textColorLink="#FFFFFF"
                    android:textSize="20sp" />

            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>